public class BeefBurger extends Plate{

    BeefBurger(){
        this.description = "Beef Burger";
    }

    @Override
    public double price(){
        return 5;
    }
}
