public class Chicken extends Plate{

    Chicken(){
        this.description = "Chicken";
    }

    @Override
    public double price(){
        return 5.99;
    }
}
