abstract class DinnerDecorator extends Plate {
    public abstract String getDescription();
}
