abstract class MashDecorator extends DinnerDecorator {

    public abstract String getDescription();

}
