abstract class Plate {
    String description = "Plate";

    String getDescription(){
        return description;
    }

    public abstract double price();
}
