public class Salmon extends Plate{

    Salmon(){
        this.description = "Salmon";
    }

    @Override
    public double price(){
        return 6;
    }
}
