public class Steak extends Plate{

    Steak(){
        this.description = "Salmon";
    }

    @Override
    public double price(){
        return 12;
    }
}
